--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "examination 2 in course 1DV523 att LNU",
   "main": "app.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
-    "mongoose": "^4.7.0",
+    "mongoose": "^4.7.2",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {},
