--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
+    "jquery": "^3.1.1",
     "mongoose": "^4.7.2",
     "nodemon": "^1.11.0"
   },
